tests/ui/borrowck/borrowck-assign-to-andmut-in-aliasable-loc.stderr
error[E0594]: cannot assign to `*s.pointer`, which is behind a `&` reference
  --> $DIR/borrowck-assign-to-andmut-in-aliasable-loc.rs:9:5
   |
LL |     *s.pointer += 1;
   |     ^^^^^^^^^^^^^^^ `s` is a `&` reference, so the data it refers to cannot be written
   |
help: consider changing this to be a mutable reference
   |
LL | fn a(s: &mut S) {
   |          +++

error[E0594]: cannot assign to `*s.pointer`, which is behind a `&` reference
  --> $DIR/borrowck-assign-to-andmut-in-aliasable-loc.rs:17:5
   |
LL |     *s.pointer += 1;
   |     ^^^^^^^^^^^^^^^ `s` is a `&` reference, so the data it refers to cannot be written
   |
help: consider changing this to be a mutable reference
   |
LL | fn c(s: &mut  &mut S) {
   |          +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0594`.
